--- a/css/layout.css
+++ b/css/layout.css
@@ -1,17 +1,15 @@
-@charset "UTF-8";
 /*font-family: 'Roboto', sans-serif;
 font-family: 'Source Sans Pro', sans-serif;*/
 :root {
   --telemagenta: #bb4077;
   --lightgrey: #898d8d;
+  --grey: #666666;
   --darkgrey: #383838;
   --transparent_white: rgba(255, 255, 255, 0.866);
+  --vertical-dropshadow-down: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 body {
-  background-color: var(--darkgrey);
-  height: 100vh;
-  width: 100vw;
   padding: unset;
   margin: unset;
 }
@@ -20,105 +18,66 @@ body a {
   color: unset;
 }
 
-.main-grid {
-  display: grid;
-  grid-template-columns: [main-start header-start logo-start img-left-start img-right-start footer-start triangle-left-start] 1fr [img-left-background-start] 1fr [teaser-start] 2fr [header-gap-start footer-links-start] 3fr [img-left-end] 1fr [header-gap-end logo-end teaser-end navigation-start img-left-background-end] 4fr [footer-links-end triangle-left-end social-start] 4fr [img-right-end header-end navigation-end main-end social-end footer-end];
-  grid-template-rows: [main-top header-top logo-top navigation-top img-left-top img-right-top] 15vh [header-bottom logo-bottom navigation-bottom] 15vh [teaser-top] 50vh [teaser-bottom] 5vh [footer-top social-top img-left-bottom] 5vh [footer-links-top] 7vh [img-right-bottom footer-links-bottom social-bottom main-bottom footer-bottom copyright-top] 3vh [copyright-bottom];
+.main-background {
+  background-image: url("../img/background.svg");
+  background-color: var(--grey);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
 }
 
-.header {
+.navbar {
+  height: 100px;
+  padding-right: 10px;
+  border-radius: unset;
   background-color: var(--transparent_white);
-  grid-column: header-start/header-end;
-  grid-row: header-top/header-bottom;
-  z-index: 80;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  box-shadow: var(--vertical-dropshadow-down);
+  font-weight: 600;
+  color: var(--lightgrey) !important;
 }
-
-.logo {
-  grid-column: logo-start/logo-end;
-  grid-row: logo-top/logo-bottom;
-  z-index: 99;
+.navbar .nav-item a {
+  height: 100px;
+  align-items: center;
+  display: flex;
 }
-.logo #fz-logo {
-  display: block;
-  height: 70%;
-  width: auto;
-  margin-left: 3em;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+.navbar a:hover {
+  color: var(--grey);
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3);
+  background-color: unset !important;
 }
-
-/*
-.header-gap {
-    background-color: rgba(255, 255, 255, 0.833);
-    grid-column: header-gap-start / header-gap-end;
-    grid-row: header-top / header-bottom;
-    z-index: 99;
-    clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 0 0, 50% 0, 100% 100%, 100% 100%, 100% 0%);
+.navbar .active {
+  -webkit-text-decoration: underline 3px solid var(--telemagenta);
+          text-decoration: underline 3px solid var(--telemagenta);
+  text-underline-offset: 5px;
+  background-color: unset;
 }
-*/
-.navigation {
-  grid-column: navigation-start/navigation-end;
-  grid-row: navigation-top/navigation-bottom;
-  z-index: 99;
-}
-
-.img-left {
-  grid-column: img-left-start/img-left-end;
-  grid-row: img-left-top/img-left-bottom; /* FF3.6+ */ /* Chrome,Safari4+ */ /* Chrome10+,Safari5.1+ */ /* Opera 11.10+ */ /* IE10+ */
-  background: linear-gradient(to right, #363636 0%, #cf3476 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#363636ff", endColorstr="#cf3476ff",GradientType=1 ); /* IE6-9 */
-  z-index: 4;
-  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 100%);
-          clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 100%);
-}
-.img-left img {
+.navbar .navbar-brand {
   height: 100%;
-  opacity: 0.35;
+  padding-left: 2em;
 }
-
-.img-left-background {
-  background-color: var(--lightgrey);
-  grid-column: img-left-background-start/img-left-background-end;
-  grid-row: img-left-top/img-left-bottom;
-  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 100%);
-          clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 100%);
-  z-index: 3;
-}
-
-.img-right {
-  grid-column: img-right-start/img-right-end;
-  grid-row: img-right-top/img-right-bottom;
-  z-index: 2;
-}
-.img-right img {
+.navbar .navbar-brand img {
   height: 100%;
 }
-
-.img-right-overlay {
-  grid-column: img-right-start/img-right-end;
-  grid-row: img-right-top/img-right-bottom;
-  z-index: 2;
-  background: rgb(0, 0, 0);
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 50%, rgba(255, 255, 255, 0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1);
+.navbar .icon-bar {
+  background-color: var(--telemagenta);
 }
-
-.triangle-left {
+.navbar .navbar-toggle {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+  height: 40px;
+  top: 20%;
+}
+.navbar .navbar-toggle:hover {
   background-color: var(--lightgrey);
-  grid-column: triangle-left-start/triangle-left-end;
-  grid-row: main-top/main-bottom;
-  z-index: 3;
-  -webkit-clip-path: polygon(0% 0%, 0% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(0% 0%, 0% 0%, 100% 100%, 0% 100%);
 }
 
 .teaser-text {
-  border: 10px rgba(255, 255, 255, 0.418) solid;
-  grid-column: teaser-start/teaser-end;
-  grid-row: teaser-top/teaser-bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 30vw;
   z-index: 99;
+  margin: 5% 20%;
   padding: 1vw 3vw;
   text-align: left;
   vertical-align: middle;
@@ -126,77 +85,129 @@ body a {
   justify-content: center;
   align-content: center;
   flex-direction: column;
-}
-.teaser-text h1 {
-  font-family: "Roboto", sans-serif;
-  font-size: calc(1vw + 1.5vh);
-  color: var(--transparent_white);
-  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
-  text-transform: uppercase;
-  margin: unset;
-}
-.teaser-text p {
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.5vw;
-  color: var(--transparent_white);
-  margin-top: 0.7em;
-  margin-bottom: 0.5em;
-}
-.teaser-text ul {
-  list-style: none;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 1.5vw;
-  color: var(--transparent_white);
-  margin: unset;
-}
-.teaser-text ul li::before {
-  content: "•";
-  color: var(--telemagenta);
-  font-weight: bold;
-  display: inline-block;
-  width: 1em;
-  margin-left: -1.5vw;
+  /* h1 {
+       font-family: 'Roboto', sans-serif;
+       font-size: calc(1vw + 1.5vh);
+       color: var(--transparent_white);
+       text-shadow: 3px 3px 4px rgba(0, 0, 0, .5);
+       text-transform: uppercase;
+       margin: unset;
+   }
+
+   p {
+       font-family: 'Source Sans Pro', sans-serif;
+       font-size: 1.5vw;
+       color: var(--transparent_white);
+       margin-top: .7em;
+       margin-bottom: .5em;
+   }
+
+   ul {
+       list-style: none;
+       font-family: 'Source Sans Pro', sans-serif;
+       font-size: 1.5vw;
+       color: var(--transparent_white);
+       margin: unset;
+   }
+   //colored bulletpoints
+   ul li::before {
+       content: "\2022";
+       color: var(--telemagenta);
+       font-weight: bold;
+       display: inline-block; 
+       width: 1em;
+       margin-left: -1.5vw;
+     }*/
 }
 
 .footer {
-  grid-column: footer-start/footer-end;
-  grid-row: footer-top/footer-bottom;
-  z-index: 4;
+  position: fixed;
+  background-color: var(--darkgrey);
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 80;
+  padding: 0.8em;
 }
-
-.footer-links {
-  grid-column: footer-links-start/footer-links-end;
-  grid-row: footer-top/footer-bottom;
-  z-index: 4;
+.footer .footer-links {
+  color: var(--transparent_white) !important;
+  z-index: 99;
   text-align: center;
   font-family: "Roboto", sans-serif;
-  font-size: 1.5em;
-  vertical-align: middle;
+  font-size: 1.3em;
+  margin: unset;
+}
+.footer .footer-links a {
+  padding: 0 3vw;
+}
+.footer a:hover {
+  color: var(--telemagenta);
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+}
+.footer .copyright {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 0.8em;
+  z-index: 99;
+  text-align: center;
+  color: var(--lightgrey);
+  padding-top: 0.2em;
+}
+.footer .social-block {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  width: -moz-fit-content;
+  width: fit-content;
+  z-index: 99;
+}
+.footer .social-block #social-wrapper {
+  background-image: url("../img/social-block.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 1.5em 5em;
+}
+.footer .social-block #social-wrapper .social-symbols {
   display: flex;
   justify-content: center;
-  align-content: center;
-  flex-direction: column;
-}
-.footer-links #footer-links a {
-  padding: 1em;
-}
-
-.social-symbols {
-  background-color: var(--transparent_white);
-  grid-column: social-start/social-end;
-  grid-row: social-top/social-bottom;
+  align-items: center;
+  margin-left: 50%;
   z-index: 99;
-  -webkit-clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 0% 100%);
-          clip-path: polygon(30% 0%, 100% 0%, 100% 100%, 0% 100%);
-  box-shadow: rgba(9, 30, 66, 0.25) 0px -10px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
-
-.copyright {
-  background-color: #1a1a1a;
-  font-family: "Source Sans Pro", sans-serif;
-  grid-column: footer-start/footer-end;
-  grid-row: copyright-top/copyright-bottom;
-  z-index: 0;
-  text-align: center;
-  color: #7A7A7A;
+.footer .social-block #social-wrapper .social-symbols #facebook-icon, .footer .social-block #social-wrapper .social-symbols #instagram-icon {
+  padding: 0.1em;
+  height: 3em;
+}
+.footer .social-block #social-wrapper .social-symbols #follow-us {
+  padding: 0.5em;
+  height: 3em;
+}
+@media only screen and (max-width: 900px) {
+  .footer .social-block #social-wrapper .social-symbols #follow-us {
+    display: none;
+  }
+}
+.footer .social-block #social-wrapper #facebook-icon:hover, .footer .social-block #social-wrapper #instagram-icon:hover {
+  filter: brightness(0.7);
+}
+.footer .iso-cert {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: -moz-fit-content;
+  width: fit-content;
+  color: black;
+  z-index: 99;
+}
+.footer .iso-cert #iso-wrapper {
+  align-items: center;
+  display: flex;
+  padding: 1em 2em;
+}
+.footer .iso-cert #iso-wrapper img {
+  height: 110px;
+}
+.footer .iso-cert #iso-wrapper img:hover {
+  filter: brightness(0.7);
 }/*# sourceMappingURL=layout.css.map */
