--- a/css/layout.css
+++ b/css/layout.css
@@ -91,21 +91,24 @@ iframe {
 
 .home {
   height: 80vh;
+  position: relative;
 }
 .home .teaser-text {
-  height: 100%;
-  padding: 5%;
+  height: 70%;
   z-index: 99;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  left: 30%;
+  top: 50%;
+  transform: translate(-30%, -50%);
+  position: absolute;
 }
 .home .teaser-text img {
   height: 100%;
 }
 @media only screen and (max-width: 900px) {
   .home .teaser-text {
-    padding: 20%;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -40%);
   }
 }
 
