--- a/css/layout.scss
+++ b/css/layout.scss
@@ -56,6 +56,7 @@ iframe {
     box-shadow: var(--vertical-dropshadow-down);
     font-weight: 600;
     color: var(--lightgrey) !important;
+    z-index: 1000;
 
     .nav-item a {
         height: 100px;
@@ -95,10 +96,19 @@ iframe {
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;        height: 40px;
         top: 20%;
+        z-index: 1100;
     }
 
     .navbar-toggle:hover {
         background-color: var(--lightgrey);
+    }
+
+    .in {
+        position: absolute;
+        right: 0;
+        padding-top: 70px;
+        background-color: var(--transparent_white);
+        height: 100vh;
     }
 }
 
