added footer-items collapse behaviour

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -215,11 +215,11 @@ iframe {
                     height: 3em;
                 }
 
-                @media only screen and (max-width: 900px) {
+                /*@media only screen and (max-width: 900px) {
                     #follow-us {
                         display: none;
                     }
-                }
+                }*/
             }
 
             #facebook-icon:hover, #instagram-icon:hover {
