--- a/css/layout.css
+++ b/css/layout.css
@@ -180,6 +180,11 @@ iframe {
   align-items: center;
   margin-left: 50%;
   z-index: 99;
+  /*@media only screen and (max-width: 900px) {
+      #follow-us {
+          display: none;
+      }
+  }*/
 }
 .footer .social-block #social-wrapper .social-symbols #facebook-icon, .footer .social-block #social-wrapper .social-symbols #instagram-icon {
   padding: 0.1em;
@@ -188,11 +193,6 @@ iframe {
 .footer .social-block #social-wrapper .social-symbols #follow-us {
   padding: 0.5em;
   height: 3em;
-}
-@media only screen and (max-width: 900px) {
-  .footer .social-block #social-wrapper .social-symbols #follow-us {
-    display: none;
-  }
 }
 .footer .social-block #social-wrapper #facebook-icon:hover, .footer .social-block #social-wrapper #instagram-icon:hover {
   filter: brightness(0.7);
