--- a/css/layout.scss
+++ b/css/layout.scss
@@ -192,6 +192,15 @@ iframe {
         width: fit-content;
         z-index: 99;
 
+        .expandOnSmall {
+            position: unset;
+            bottom: unset;
+            right: unset;
+            width: 100vw;
+            background-color: white;
+            z-index: 1000 !important;
+        }
+
         #social-wrapper {
             background-image: url("../img/social-block.svg");
             background-repeat: no-repeat;
@@ -208,22 +217,16 @@ iframe {
                 #facebook-icon, #instagram-icon {
                     padding: .1em;
                     height: 3em;
+
+                    &:hover {
+                        filter: brightness(.7); 
+                    }
                 }
 
                 #follow-us {
                     padding: .5em;
                     height: 3em;
                 }
-
-                /*@media only screen and (max-width: 900px) {
-                    #follow-us {
-                        display: none;
-                    }
-                }*/
-            }
-
-            #facebook-icon:hover, #instagram-icon:hover {
-                filter: brightness(.7);
             }
         }
     }
