added landing page animations

--- a/css/layout.scss
+++ b/css/layout.scss
@@ -87,7 +87,7 @@ iframe {
     .navbar-brand {
         height: 100%;
         padding-left: 2em;
-        img {
+        svg {
             height: 100%;
         }
 
