--- a/css/layout.css
+++ b/css/layout.css
@@ -77,7 +77,7 @@ iframe {
   height: 100%;
   padding-left: 2em;
 }
-.navbar .navbar-brand img {
+.navbar .navbar-brand svg {
   height: 100%;
 }
 .navbar .navbar-brand:hover {
